<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XNote</string>
    <string name="navigation_notes">笔记</string>
    <string name="navigation_agent">Agent</string>
    <string name="navigation_stickers">贴纸库</string>
    <string name="navigation_profile">我的</string>
    <string name="action_search">搜索</string>
    <string name="action_back">返回</string>
    <string name="action_create_note">新建笔记</string>
    <string name="notes_title">XNote</string>
    <string name="notes_scope_all">全部笔记</string>
    <string name="notes_scope_unfiled">未归档</string>
    <string name="notes_untitled">无标题</string>
    <string name="notes_recent_section">最近编辑</string>
...
